<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/regularSpace"
    android:paddingLeft="@dimen/regularSpace"
    android:paddingRight="@dimen/regularSpace"
    android:paddingTop="@dimen/regularSpace"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/foto"
            android:scaleType="centerCrop"
            android:layout_marginBottom="@dimen/largeSpace"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/largeSpace"
            android:text="@string/title"
            android:textSize="@dimen/titleText"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/largeSpace"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="@dimen/questionText"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/largeSpace"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/registration"
            android:scaleType="centerCrop"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <CheckBox
            android:id="@+id/q1a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q1a1"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q1a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q1a2"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q1a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q1a3"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q1a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q1a4"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <EditText
            android:id="@+id/q2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fillanswer"
            android:inputType="textCapSentences"
            android:layout_marginBottom="@dimen/smallSpace"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q3a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q3a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q3a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a3"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q3a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a4"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q4a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q4a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a3"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q4a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a4"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <EditText
            android:id="@+id/q5a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fillanswer"
            android:inputType="textCapWords"
            android:layout_marginBottom="@dimen/smallSpace"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q6a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q6a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q6a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6a3"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q6a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6a4"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q7a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q7a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q8a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q8a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q8a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8a3"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q8a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8a4"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/q9a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q9a1"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
            <RadioButton
                android:id="@+id/q9a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q9a2"
                android:layout_marginBottom="@dimen/smallSpace"
                android:paddingLeft="@dimen/mediumSpace"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            android:textSize="@dimen/questionText"
            android:textStyle="italic"
            android:textColor="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/smallSpace"
            android:paddingTop="@dimen/largeSpace"
            />

        <CheckBox
            android:id="@+id/q10a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q10a1"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q10a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/q10a2"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q10a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q10a3"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q10a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q10a4"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q10a5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q10a5"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />
        <CheckBox
            android:id="@+id/q10a6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallSpace"
            android:text="@string/q10a6"
            android:paddingLeft="@dimen/mediumSpace"
            android:textSize="@dimen/answerText"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textSize="@dimen/regularText"
            android:textStyle="bold"
            android:onClick="submit"
            android:background="@color/colorAccent"
            android:layout_marginLeft="@dimen/extraLargeSpace"
            android:layout_marginRight="@dimen/extraLargeSpace"
            android:layout_marginTop="@dimen/regularSpace"
            android:layout_marginBottom="@dimen/regularSpace"
            />

    </LinearLayout>

</ScrollView>
